--- a/media/page.html
+++ b/media/page.html
@@ -197,6 +197,8 @@
                             <td style="padding-top: 0;">
                                 <label title="Allows/disallow resources under root">
                                     <input type="checkbox" v-model="modelProperties.resources" style="width: auto;"
+                                    @focus="focusOnAllowResources"
+                                    @blur="blurOnAllowResources"
                                         :true-value="'All'" :false-value="'Categories'">
                                     Allow resources under root
                                 </label>
